@@ -8,6 +8,7 @@ Fixed bugs
 
 - fixed definition of slack variables of >= constraints and ranged rows in LP interface to Gurobi (lpi_grb.c)
 - free memory leaking singleton arrays for ignored variables in SCIPapplyHeurDualval()
+- use epsilon tolerance for bound implications of dual substitutions in dualPresolve() of cons_linear.c
 
 Build system
 ------------
